logout and cookie added
