# routes/auth.js
@@ -5,7 +5,7 @@ const {
   authorizePermissions,
 } = require("../middlewares/authentication");
 
-const { register, login } = require("../controllers/auth");
+const { register, login, logout } = require("../controllers/auth");
 
 router.post(
   "/register",
@@ -13,5 +13,6 @@ router.post(
   register
 );
 router.post("/login", login);
+router.get("/logout", logout);
 
 module.exports = router;
